Fixed alignment of log point badges (plain color and unicorn)

--- a/packages/bvaughn-architecture-demo/components/console/renderers/shared.module.css
+++ b/packages/bvaughn-architecture-demo/components/console/renderers/shared.module.css
@@ -142,7 +142,7 @@
   width: 0.5em;
   height: 0.5em;
   position: absolute;
-  top: 0.5em;
+  top: 0.75em;
   left: 0.5em;
 }
 
@@ -168,9 +168,10 @@
 }
 
 .UnicornBadge {
-  top: 0.25em;
+  position: absolute;
+  left: 1.5em;
+  top: 0.5em;
   overflow: visible;
-  position: relative;
   display: inline-block;
   margin: 0 0.5em 0 -1em;
 }
